<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_UpdateVariablesMoving" Id="{8cee1700-2e8b-41ec-ad51-7968702f1049}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_UpdateVariablesMoving
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT GVL_IO.gDigInputs.bAccessDoorInterlockFdbk1 AND NOT GVL_IO.gDigInputs.bAccessDoorInterlockFdbk2 AND NOT GVL_IO.gDigInputs.bAccessDoorInterlockFdbk3 THEN
	GVL_Safety.SafetyOutputs.bBelowDoorsFeedback := TRUE;
ELSE
	GVL_Safety.SafetyOutputs.bBelowDoorsFeedback := FALSE;
END_IF

 ]]></ST>
    </Implementation>
    <LineIds Name="PRG_UpdateVariablesMoving">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>